--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.ms-square:expandableTextView:0.1.4'
 }
