--- a/mvptest/src/main/AndroidManifest.xml
+++ b/mvptest/src/main/AndroidManifest.xml
@@ -1,35 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.ingramy.mvptest"
+<manifest package="shopsys.ingramy.com.mvptest"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_PROFILE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
     <application
-        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".view.MainActivity"
-            android:label="@string/app_name">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.LoginActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".view.SettingsActivity"
-            android:label="@string/title_activity_settings">
         </activity>
     </application>
 
