--- a/ishop/build.gradle
+++ b/ishop/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.ms-square:expandableTextView:0.1.4'
+    compile 'com.github.armcha:LuseenBottomNavigation:1.3.0'
 }
