--- a/mvptest/build.gradle
+++ b/mvptest/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "shopsys.ingramy.com.mvptest"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.armcha:LuseenBottomNavigation:1.3.0'
 }
